--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "webapp",
-  "version": "0.0.0",
+  "name": "win-rt-rgb",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
