--- a/webapp/tsconfig.base.json
+++ b/webapp/tsconfig.base.json
@@ -5,6 +5,7 @@
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
+    "strictNullChecks": true,
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
