--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -30,11 +30,13 @@
     "@types/styled-components": "^5.1.0",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
+    "css-loader": "^4.2.1",
     "electron": "^8.2.2",
     "electron-builder": "^22.7.0",
     "electron-devtools-installer": "^3.1.0",
     "html-webpack-plugin": "^4.2.0",
     "npm-run-all": "^4.1.5",
+    "style-loader": "^1.2.1",
     "typescript": "^3.9.5",
     "wait-on": "^5.0.1",
     "webpack": "^4.42.1",
