--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -30,6 +30,7 @@
     "@types/react-dom": "^16.9.6",
     "@types/styled-components": "^5.1.0",
     "babel-loader": "^8.1.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "cross-env": "^7.0.2",
     "css-loader": "^4.2.1",
     "electron": "^8.2.2",
@@ -47,8 +48,10 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "core-js": "^3.6.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "regenerator-runtime": "^0.13.7",
     "styled-components": "^5.1.1"
   },
   "build": {
